# nantralPlatform

./: .gitignore  404.html  CNAME  LICENSE.txt  Makefile  README  README.md  index.html  search-index.json  setup.cfg  sitemap.xml
backend/: .flake8  .flakeheaven_baseline  .gitignore  Pipfile  db.sqlite3-journal  install.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt  run_server.sh  run_server_staging.sh  sonar-project.properties
backend/apps/academic/: admin.py  api_urls.py  api_views.py  forms.py  models.py  tests.py  urls.py  views.py
backend/apps/account/: admin.py  api_urls.py  api_views.py  apps.py  emailAuthBackend.py  factories.py  forms.py  manager.py  matrix_urls.py  matrix_views.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  tokens.py  urls.py  utils.py  validators.py  views.py
backend/apps/administration/: admin.py  api_urls.py  api_views.py  apps.py  forms.py  models.py  urls.py  views.py
backend/apps/celery/: __init__.py  config.py
backend/apps/club/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/core/: api_urls.py  api_views.py  apps.py  urls.py  views.py
backend/apps/event/: admin.py  api_urls.py  api_views.py  factories.py  forms.py  models.py  serializers.py  test_event_debug.py  tests.py  translation.py  urls.py  views.py
backend/apps/exchange/: admin.py  urls.py  views.py
backend/apps/family/: admin.py  admin_urls.py  admin_views.py  factories.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/apps/group/: admin.py  api_urls.py  api_views.py  factories.py  forms.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  translation.py  (+2 more)
backend/config/: __init__.py  asgi.py  oidc_provider_settings.py  urls.py  wsgi.py
backend/static/: assetlinks.json  manifest.webmanifest  sitemap.txt
backend/templates/: base.html  base_bg.html  base_empty.html
(+4550 files in other folders)
